--- a/trunk/Utils/DedicatedServerGUI/unitmain.lfm
+++ b/trunk/Utils/DedicatedServerGUI/unitmain.lfm
@@ -1,7 +1,7 @@
 object FormMain: TFormMain
-  Left = 431
+  Left = 344
   Height = 507
-  Top = 181
+  Top = 144
   Width = 815
   Anchors = [akTop]
   Caption = 'KaM Dedicated Server'
@@ -10,7 +10,7 @@ object FormMain: TFormMain
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poScreenCenter
-  LCLVersion = '0.9.30.2'
+  LCLVersion = '0.9.30.4'
   object StartStopButton: TButton
     Left = 624
     Height = 48
@@ -23,10 +23,10 @@ object FormMain: TFormMain
     TabOrder = 4
   end
   object Label1: TLabel
-    Left = 606
-    Height = 21
+    Left = 623
+    Height = 16
     Top = 16
-    Width = 87
+    Width = 70
     Anchors = [akTop, akRight]
     Caption = 'Server status:'
     ParentColor = False
@@ -42,7 +42,7 @@ object FormMain: TFormMain
     ClientHeight = 355
     ClientWidth = 204
     TabOrder = 0
-    object ListBox1: TListBox
+    object PlayersList: TListBox
       Left = 1
       Height = 353
       Top = 1
@@ -54,7 +54,7 @@ object FormMain: TFormMain
         'Player3'
         '...'
       )
-      ItemHeight = 20
+      ItemHeight = 15
       TabOrder = 0
     end
   end
@@ -71,17 +71,17 @@ object FormMain: TFormMain
     AnchorSideRight.Control = Splitter1
     AnchorSideBottom.Control = Edit1
     Left = 1
-    Height = 325
+    Height = 330
     Top = 152
     Width = 602
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Panel2'
-    ClientHeight = 325
+    ClientHeight = 330
     ClientWidth = 602
     TabOrder = 1
     object LogsMemo: TMemo
       Left = 1
-      Height = 323
+      Height = 328
       Top = 1
       Width = 600
       Align = alClient
@@ -98,8 +98,8 @@ object FormMain: TFormMain
   object Edit1: TEdit
     AnchorSideRight.Control = SendCmdButton
     Left = 1
-    Height = 28
-    Top = 477
+    Height = 23
+    Top = 482
     Width = 530
     Anchors = [akLeft, akRight, akBottom]
     TabStop = False
@@ -126,12 +126,12 @@ object FormMain: TFormMain
     TabOrder = 6
     object Basic: TTabSheet
       Caption = 'Basic'
-      ClientHeight = 119
+      ClientHeight = 124
       ClientWidth = 608
       object cServerWelcomeMessage: TEdit
         Tag = 1
         Left = 8
-        Height = 28
+        Height = 23
         Top = 88
         Width = 588
         Anchors = [akTop, akLeft, akRight]
@@ -140,16 +140,16 @@ object FormMain: TFormMain
       end
       object Label9: TLabel
         Left = 8
-        Height = 21
+        Height = 16
         Top = 64
-        Width = 168
+        Width = 133
         Caption = 'Server welcome message'
         ParentColor = False
       end
       object cServerName: TEdit
         Tag = 1
         Left = 8
-        Height = 28
+        Height = 23
         Top = 32
         Width = 308
         OnChange = ControlChange
@@ -157,15 +157,15 @@ object FormMain: TFormMain
       end
       object Label2: TLabel
         Left = 8
-        Height = 21
+        Height = 16
         Top = 8
-        Width = 83
+        Width = 66
         Caption = 'Server name'
         ParentColor = False
       end
       object cMaxRooms: TSpinEdit
         Left = 348
-        Height = 28
+        Height = 23
         Top = 32
         Width = 112
         OnChange = ControlChange
@@ -174,17 +174,17 @@ object FormMain: TFormMain
       end
       object Label10: TLabel
         Left = 348
-        Height = 21
+        Height = 16
         Top = 8
-        Width = 79
+        Width = 63
         Caption = 'Max Rooms'
         ParentColor = False
       end
       object cAnnounceServer: TCheckBox
         Left = 484
-        Height = 24
+        Height = 19
         Top = 35
-        Width = 135
+        Width = 110
         Caption = 'Announce Server'
         OnChange = ControlChange
         TabOrder = 3
